--- a/templates/sensors.html
+++ b/templates/sensors.html
@@ -1,9 +1,9 @@
 {% extends"base1.html" %}
 {% block content%}
-<h1>Atuadores</h1>
+<h1>Sensores</h1>
 <ul>
-    {% for actuator in actuators %}
-    <li>{{ actuator }}</li>
+    {% for sensor in sensors %}
+    <li>{{ sensor }}</li>
     {% endfor %}
 </ul>
 {% endblock%}
