--- a/templates/actuators/remove_actuator.html
+++ b/templates/actuators/remove_actuator.html
@@ -1,5 +1,6 @@
 <!-- remove actuator -->
-<html>
+{% extends"base.html" %}
+{% block content%}
 <body>
     <form action="http://localhost:8080/del_actuator" method="post">
         <select name="actuator" class="Input">
@@ -10,4 +11,4 @@
         </select>
     </form>
 </body>
-</html>
+{% endblock%}
