--- a/templates/actuators/actuators.html
+++ b/templates/actuators/actuators.html
@@ -1,6 +1,16 @@
 <!-- actuators -->
 {% extends"base.html" %}
 {% block content%}
+<style>
+    ul {
+        list-style-type: none;
+        padding: 0;
+    }
+    
+    li {
+        margin-bottom: 10px;
+    }
+</style>
 <h1>Atuadores</h1>
 <ul>
     {% for actuator in actuators %}
