--- a/templates/sensors/register_sensor.html
+++ b/templates/sensors/register_sensor.html
@@ -1,11 +1,41 @@
 <!-- register sensor -->
 {% extends"base.html" %}
 {% block content%}
-<body>
-    <form action = "http://localhost:8080/add_sensor" method = "post">
-        <p>Sensor:</p>
-        <p><input type = "text" name = "sensor" placeholder="Sensor" required/></p>
-        <p><input type = "submit" value = "Cadastrar" /></p>
-    </form>
-</body>
+<style>
+    form {
+        margin-top: 20px;
+    }
+
+    h1 {
+        margin-bottom: 10px;
+    }
+
+    input[type="text"] {
+        width: 60%;
+        padding: 10px;
+        margin: 8px 0;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+    }
+
+    input[type="submit"] {
+        width: 60%;
+        background-color: #4CAF50;
+        color: white;
+        padding: 12px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+
+    input[type="submit"]:hover {
+        background-color: #45a049;
+    }
+</style>
+<form action = "http://localhost:8080/add_sensor" method = "post">
+    <h1>Cadastrar Sensor:</h1>
+    <p><input type = "text" name = "sensor" placeholder="Sensor" required/></p>
+    <p><input type = "submit" value = "Cadastrar" /></p>
+</form>
 {% endblock%}
