--- a/templates/sensors/sensors.html
+++ b/templates/sensors/sensors.html
@@ -1,6 +1,16 @@
 <!-- sensors -->
 {% extends"base.html" %}
 {% block content%}
+<style>
+    ul {
+        list-style-type: none;
+        padding: 0;
+    }
+    
+    li {
+        margin-bottom: 10px;
+    }
+</style>
 <h1>Sensores</h1>
 <ul>
     {% for sensor in sensors %}
