implementado CRUD para usuarios

--- a/templates/home.html
+++ b/templates/home.html
@@ -34,5 +34,8 @@
     <li><a href="/list_actuators">Listar Atuadores</a></li>
     <li><a href="/register_actuator">Cadastrar Atuador</a></li>
     <li><a href="/remove_actuator">Remover Atuador</a></li>
+    <li><a href="/list_users">Listar Usuário</a></li>
+    <li><a href="/register_user">Cadastrar Usuário</a></li>
+    <li><a href="/remove_user">Remover Usuário</a></li>
 </ul>
 {% endblock%}
