--- a/templates/actuators/actuators.html
+++ b/templates/actuators/actuators.html
@@ -2,19 +2,31 @@
 {% extends"base.html" %}
 {% block content%}
 <style>
-    ul {
-        list-style-type: none;
-        padding: 0;
+    table {
+        width: 60%;
+        border-collapse: collapse;
+        margin: auto;
     }
-    
-    li {
-        margin-bottom: 10px;
+
+    th, td {
+        padding: 8px;
+        text-align: left;
+        border-bottom: 1px solid #ddd;
+    }
+
+    tr:hover {
+        background-color: #f5f5f5;
     }
 </style>
-<h1>Atuadores</h1>
-<ul>
+<h1>Lista de Atuadores</h1>
+<table>
+    <tr>
+        <th>Atuadores</th>
+    </tr>
     {% for actuator in actuators %}
-    <li>{{ actuator }}</li>
+    <tr>
+        <td>{{ actuator }}</td>
+    </tr>
     {% endfor %}
-</ul>
+</table>
 {% endblock%}
