--- a/templates/users/users.html
+++ b/templates/users/users.html
@@ -1,20 +1,34 @@
 <!-- actuators -->
-{% extends"base.html" %}
-{% block content%}
+{% extends "base.html" %}
+{% block content %}
 <style>
-    ul {
-        list-style-type: none;
-        padding: 0;
+    table {
+        width: 60%;
+        border-collapse: collapse;
+        margin: auto;
     }
-    
-    li {
-        margin-bottom: 10px;
+
+    th, td {
+        padding: 8px;
+        text-align: left;
+        border-bottom: 1px solid #ddd;
+    }
+
+    tr:hover {
+        background-color: #f5f5f5;
     }
 </style>
-<h1>Usuários</h1>
-<ul>
-    {% for user in users %}
-    <li>{{ user }}</li>
+<h1>Lista de Usuários</h1>
+<table>
+    <tr>
+        <th>Usuário</th>
+        <th>Senha</th>
+    </tr>
+    {% for username, password in users.items() %}
+    <tr>
+        <td>{{ username }}</td>
+        <td>{{ password }}</td>
+    </tr>
     {% endfor %}
-</ul>
-{% endblock%}
+</table>
+{% endblock %}
