--- a/templates/home.html
+++ b/templates/home.html
@@ -41,12 +41,15 @@
 <ul>
     <li class="sensor"><a href="/list_sensors">Listar Sensores</a></li>
     <li  class="sensor"><a href="/register_sensor">Cadastrar Sensor</a></li>
+    <li  class="sensor"><a href="/edit_sensor">Editar Sensor</a></li>
     <li  class="sensor"><a href="/remove_sensor">Remover Sensor</a></li>
     <li  class="actuator"><a href="/list_actuators">Listar Atuadores</a></li>
     <li class="actuator"><a href="/register_actuator">Cadastrar Atuador</a></li>
+    <li class="actuator"><a href="/edit_actuator">Editar Atuador</a></li>
     <li class="actuator"><a href="/remove_actuator">Remover Atuador</a></li>
     <li  class="user"><a href="/list_users">Listar Usuários</a></li>
     <li class="user"><a href="/register_user">Cadastrar Usuário</a></li>
+    <li class="user"><a href="/edit_user">Editar Usuário</a></li>
     <li class="user"><a href="/remove_user">Remover Usuário</a></li>
 </ul>
 {% endblock%}
