--- a/templates/sensors/edit_sensor.html
+++ b/templates/sensors/edit_sensor.html
@@ -36,15 +36,14 @@
         opacity: 0.8;
     }
 </style>
-<form action="http://localhost:8080/update_user" method="post" id="editUserForm">
-    <h1>Editar Usuário:</h1>
-    <select name="user" class="Input" id="userSelect">
-        {% for username, name in users.items() %}
-            <option value="{{ username }}">{{ username }}</option>
+<form action="http://localhost:8080/update_sensor" method="post" id="editSensorForm">
+    <h1>Editar Sensor:</h1>
+    <select name="sensor" class="Input" id="sensorSelect">
+        {% for sensor in sensors %}
+            <option value="{{ sensor }}">{{ sensor }}</option>
         {% endfor %}
     </select>
-    <p><input type="text" name="new_name" placeholder="Novo Nome" /></p>
-    <p><input type="password" name="new_password" placeholder="Nova Senha" /></p>
+    <p><input type="text" name="new_sensor_name" placeholder="Novo nome do sensor" /></p>
     <p><input type="submit" value="Atualizar" /></p>
 </form>
 {% endblock %}
