um monte de coisa

--- a/templates/admin_home.html
+++ b/templates/admin_home.html
@@ -24,6 +24,10 @@
         background-color:  #e3943a;
     }
 
+    li.mqtt a {
+        background-color:  #2db998;
+    }
+
     li a {
         display: block;
         color: white;
@@ -51,5 +55,7 @@
     <li class="user"><a href="/register_user">Cadastrar Usuário</a></li>
     <li class="user"><a href="/edit_user">Editar Usuário</a></li>
     <li class="user"><a href="/remove_user">Remover Usuário</a></li>
+    <li class="mqtt"><a href="/mqtt_display">Exibir MQTT</a></li>
+    <li class="mqtt"><a href="/mqtt_publish">Enviar MQTT</a></li>
 </ul>
 {% endblock%}
