--- a/templates/admin_home.html
+++ b/templates/admin_home.html
@@ -1,7 +1,7 @@
 <!-- admin_home -->
 {% extends"base.html" %}
 {% block content%}
-<h1>Bem-vindo à Minha Casa</h1>
+<h1>Bem-vindo, {{user}}</h1>
 <style>
     ul {
         list-style-type: none;
