--- a/templates/mqtt/mqtt_publish.html
+++ b/templates/mqtt/mqtt_publish.html
@@ -10,6 +10,7 @@
         cursor: pointer;
         font-size: 20px;
         margin: 0 5px;
+        transition: 100ms;
     }
 
     .button.ok {
@@ -34,6 +35,10 @@
 
     .button:hover {
         opacity: 0.8;
+    }
+
+    .button:active {
+        opacity: 0.5;
     }
 
 </style>
