--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!-- base -->
 <html>
     <head>
-        <title>Minha Casa</title>
+        <title>Umidade sob controle</title>
         <style>
             body {
                 font-family: Arial, sans-serif;
