titulo incluido nas pagians de login

--- a/templates/login/invalid_credentials.html
+++ b/templates/login/invalid_credentials.html
@@ -1,6 +1,7 @@
 <!-- invalid credentials -->
 <html>
     <head>
+        <title>Umidade sob controle</title>
         <style>
             body {
                 font-family: Arial, sans-serif;
