--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -1,6 +1,7 @@
 <!-- login -->
 <html>
     <head>
+        <title>Umidade sob controle</title>
         <style>
         .background {
             font-family: Arial, sans-serif;
